# omega-screen-recorder

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  OVERVIEW.md  QUICKSTART_ORGANIZER.md  README.md
examples/: README.md
src/: cli.rs  config.rs  main.rs
src/audio/: mod.rs
src/encoder/: mod.rs
