[package]
name = "screenrec"
version = "0.1.0"
edition = "2025"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance cross-platform screen recording CLI tool"
license = "MIT"
repository = "https://github.com/OmegaLabs/rust-screenrec-challenge"

[[bin]]
name = "screenrec"
path = "src/main.rs"

[dependencies]
# CLI argument parsing - Uncomment and use as needed
# clap = { version = "4.4", features = ["derive"] }

# Async runtime - if you need async operations
# tokio = { version = "1.35", features = ["full"] }

# Screen capture libraries - Choose based on your approach
# scrap = "0.5"
# screenshot = "0.3"

# Audio capture
# cpal = "0.15"

# Video encoding
# ffmpeg-next = "6.0"

# Serialization for config files
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# toml = "0.8"

# Error handling
# anyhow = "1.0"
# thiserror = "1.0"

# Cross-platform support
# cfg-if = "1.0"

# Image handling
# image = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
# screencapturekit = "0.2"
# core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies
# windows = { version = "0.52", features = ["Win32_Graphics_Gdi", "Win32_Graphics_Direct3D11"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1